--- a/benefits-overview.html
+++ b/benefits-overview.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VA Benefits Overview</title>
     <link rel="stylesheet" href="css/style.css">
-
+    <script src="js/script.js" defer></script>
     <link rel="icon" type="image/png" sizes="512x512" href="images/favicon-vector2.png">
 </head>
 <body>
@@ -14,6 +14,12 @@
             <div class="logo">
                 <a href="index.html">Veterans Assistance Page</a>
             </div>
+            <div class="hamburger" id="hamburger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li class="dropdown">
